# neo4j-databricks-agent

./: .env.example  .gitignore  README.md  app.yaml  app.yml  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agent_server/: agent.py  start_server.py
agent_server/static/: app.js  index.html  styles.css
docs/: AGENT_IN_DATABRICKS.md
mcp-server/: README.md  app.yaml  landing.html  requirements.txt  server.py
prompts/: agent_in_databricks.md
scripts/: setup_databricks_secrets.py  start_app.py
