[project]
name = "neo4j-databricks-agent"
version = "0.1.0"
description = "Databricks Apps agent for read-only Neo4j graph analysis"
readme = "README.md"
authors = [
    { name = "Agent Developer" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-openai>=0.13.0",
    "databricks-agents>=1.9.3",
    "mlflow>=3.10.0",
    "neo4j>=6.0.0",
    "openai-agents>=0.4.1",
    "python-dotenv>=1.2.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server", "scripts"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=9.0.2",
]

setup = [
    "ruamel.yaml>=0.18.0",
]

[tool.uv]
default-groups = ["dev", "setup"]


[project.scripts]
quickstart = "scripts.quickstart:main"
start-app = "scripts.start_app:main"
start-server = "agent_server.start_server:main"
agent-evaluate = "agent_server.evaluate_agent:evaluate"
discover-tools = "scripts.discover_tools:main"
preflight = "scripts.preflight:main"
setup-neo4j-secrets = "scripts.setup_databricks_secrets:main"
